Fix issue where SVG icons would show as too small

--- a/display/shared/styling/parts/actor-sheets.less
+++ b/display/shared/styling/parts/actor-sheets.less
@@ -392,7 +392,6 @@
         img {
           border-radius: 50%;
           padding: 2px;
-          max-width: 25px;
         }
       }
 
@@ -441,7 +440,10 @@
   .item-image img {
     border-radius: 50%;
     padding: 2px;
+    min-width: 25px;
+    min-height: 25px;
     max-width: 25px;
+    max-height: 25px;
   }
 
   /* General Resources */
